--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Latte's Luxury!</title>
+    <title>Katerina Ramirez - Undergraduate Physics Major</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #fff; /* Background color */
         }
-        h1 {
-            font-size: 36px;
-            color: #333;
+        .title {
+            text-align: center;
+            color: #ffccff; /* Baby pink color */
+            text-shadow: 1px 1px 2px #000; /* Black outlines */
+        }
+        .subheading {
+            text-align: center;
+            color: #000; /* Black color */
         }
     </style>
 </head>
 <body>
 
-<h1>Welcome to Latte's Luxury!</h1>
+<h1 class="title">Katerina Ramirez</h1>
+<h2 class="subheading">Undergraduate Physics Major</h2>
 
 </body>
 </html>
