--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katerina Ramirez - Undergraduate Physics Major</title>
+    <title>Katerina Ramirez</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #fff; /* Background color */
+            background-color: #fffce6; /* Background color */
         }
         .title {
             text-align: center;
@@ -29,7 +29,4 @@
 
 </body>
 </html>
-body {
-    background-color: #fffce6; /* Pastel yellow background color */
-}
 
