--- a/index.html
+++ b/index.html
@@ -27,6 +27,44 @@
 <h1 class="title">Katerina Ramirez</h1>
 <h2 class="subheading">Undergraduate Physics Major</h2>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5; /* Background color */
+        }
+        .about-me {
+            margin-left: 20px; /* Indentation for the paragraph */
+            padding: 10px;
+            background-color: #ffb6c1; /* Dark pink color for the header */
+        }
+        .about-me p {
+            margin: 0; /* Remove default margin */
+        }
+    </style>
+</head>
+<body>
+
+<div class="about-me">
+    <h2>About Me:</h2>
+    <p>
+        Hi, I'm Katerina Ramirez, a third-year undergraduate Physics major at California State University, Long Beach.
+        My journey into the world of physics began with a fascination for understanding the fundamental laws governing the universe.
+        As I progress through my studies, I find myself increasingly drawn to the intricate realms of theoretical physics,
+        particularly exploring the mysteries of particle physics and quantum mechanics.
+        With a curious mind and a passion for discovery, I am eager to delve deeper into these complex topics and unravel the secrets of the cosmos.
+        My academic pursuits are not limited to the classroom; I actively seek out opportunities for research and hands-on experience to broaden my understanding and skills in the field.
+ 	Outside of academics, I enjoy engaging in discussions with peers, attending seminars, and keeping abreast of the latest advancements in physics.
+	 With a strong determination and dedication to my studies, I look forward to making meaningful contributions to the field of physics and beyond.
+    </p>
+
 </body>
 </html>
 
