--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         .title {
             text-align: center;
-            color: #ffccff; /* Baby pink color */
+            color: #ffb6c1; /* Dark pink color for title */
             text-shadow: 1px 1px 2px #000; /* Black outlines */
         }
         .subheading {
