--- a/index.html
+++ b/index.html
@@ -56,13 +56,19 @@
     <h2>About Me:</h2>
     <p>
         Hi, I'm Katerina Ramirez, a third-year undergraduate Physics major at California State University, Long Beach.
-        My journey into the world of physics began with a fascination for understanding the fundamental laws governing the universe.
+        My journey into the world of physics began with a fascination for understanding the fundamental laws governing the universe. 
+	After receiving my Associate's degrees in Physics and Business Administration.
         As I progress through my studies, I find myself increasingly drawn to the intricate realms of theoretical physics,
         particularly exploring the mysteries of particle physics and quantum mechanics.
-        With a curious mind and a passion for discovery, I am eager to delve deeper into these complex topics and unravel the secrets of the cosmos.
-        My academic pursuits are not limited to the classroom; I actively seek out opportunities for research and hands-on experience to broaden my understanding and skills in the field.
- 	Outside of academics, I enjoy engaging in discussions with peers, attending seminars, and keeping abreast of the latest advancements in physics.
-	 With a strong determination and dedication to my studies, I look forward to making meaningful contributions to the field of physics and beyond.
+
+        My academic pursuits are not limited to the classroom; I am conducting research involving magnetoresistors under the supervision of my mentors
+	and searching for more theory-based experience in particle physics. In pursuit of community after my transfer to CSULB, I have become active in many organizations and clubs. 
+	Leaderships roles suit my style of education, so I have become the Vice President of Astronomy Club and Publicist for the Women in Physics Club (WiP)
+	Furthermore, I plan on joining the board of the Society of Physics Students (SPS) Chapter next semester. In the upcoming semester, 
+	I also plan to branch out and join clubs that align with my interests aside from physics. Most notably, my goals are to try out and
+	become a part of the League of Legends Team for the ESports Association at CSULB. 
+ 	Outside of academics, I enjoy attending conferences, performing arts, and ESports.
+	With a strong determination and dedication to my studies, I look forward to making meaningful contributions to the field of physics and beyond.
     </p>
 
 </body>
